kubernetes/aquarium.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquarium-sprite
spec:
  ports:
  - name: backend
    port: 4001
    protocol: TCP
    targetPort: 4001
  selector:
    app: aquarium-sprite
---
apiVersion: v1
kind: Service
metadata:
  name: aquarium-tetra
spec:
  ports:
  - name: backend
    port: 4002
    protocol: TCP
    targetPort: 4002
  selector:
    app: aquarium-tetra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aquarium-sprite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aquarium-sprite
  template:
    metadata:
      labels:
        app: aquarium-sprite
    spec:
      containers:
      - env:
        - name: REDIS_URI
          value: redis://redis:6379/0
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: otel-collector-headless:4318
        image: ghcr.io/konstfish/aquarium_sprite:latest
        imagePullPolicy: Always
        name: aquarium-sprite
        ports:
        - containerPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aquarium-tetra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aquarium-tetra
  template:
    metadata:
      labels:
        app: aquarium-tetra
    spec:
      containers:
      - env:
        - name: REDIS_URI
          value: redis://redis:6379/0
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: otel-collector-headless:4318
        image: ghcr.io/konstfish/aquarium_tetra:latest
        imagePullPolicy: Always
        name: aquarium-tetra
        ports:
        - containerPort: 4002
        replicas: 3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aquarium-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: aquarium.appdomain.konst.fish
    http:
      paths:
      - backend:
          service:
            name: aquarium-sprite
            port:
              number: 4001
        path: /sprites/v1
        pathType: Prefix
      - backend:
          service:
            name: aquarium-tetra
            port:
              number: 4002
        path: /tetra/v1
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
